fix double border

--- a/web/src/components/LaunchForm.module.css
+++ b/web/src/components/LaunchForm.module.css
@@ -9,6 +9,7 @@
     align-self: stretch;
     background: #FCECD9;
     margin-top: -20px;
+    border-top: 1px solid #262019;
 }
 
 .demoAndTrailer {
