--- a/web/src/components/TitleScreen.module.css
+++ b/web/src/components/TitleScreen.module.css
@@ -117,7 +117,6 @@
 }
 
 .banner {
-  border-bottom: 1px solid #262019;
   min-height: 160px;
   position: relative;
 }
